refactor: 게시글 상세조회시 join을 이용하여 쿼리수 줄이도록 하였음.